# roll4treasure

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/common/: util.py
app/core/: config.py  templates.py
app/db/: pool.py
app/features/house/: engine.py  models.py  routers.py
app/features/treasure/: models.py  routers.py  scryfall.py  service.py  store.py
app/static/css/: base.css  house.css  treasure.css
app/static/js/: base.js  house.js  treasure.js
app/templates/: _head.html  _nav.html  base.html
app/templates/house/: index.html
app/templates/treasure/: index.html  precache.html  session.html
app/treasure/: models.py  scryfall.py  service.py  service.py.save  store.py
app/web/: health.py  home.py  router.py  routes_sim.py  routes_treasure.py
roll4treasure-main/: .gitignore  requirements.txt
roll4treasure-main/app/core/: config.py
roll4treasure-main/app/features/treasure/: service.py  store.py
roll4treasure-main/app/static/js/: treasure.js
roll4treasure-main/app/templates/: base.html
roll4treasure-main/app/templates/house/: index.html
roll4treasure-main/app/web/: router.py
static/: house.css  house.js  main.css  treasure.js
templates/: home.html  house.html  treasure_index.html  treasure_precache.html  treasure_session.html
tests/: test_config.py  test_db_pool_unit.py  test_health.py  test_lifespan.py  test_smoke.py
