[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","W","I","B","UP","SIM","PL"]
ignore = [
  "E203",
  "PLR2004",
  "PLR0912",
  "PLR0915",
  "E501",
  "B904",
  "SIM103",
  "SIM105",
  "SIM117",
  "PLW0603",
  "PLW2901",
  "PLR0913",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
plugins = []
disable_error_code = ["unused-ignore","var-annotated","no-redef","arg-type"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
]
